Update index.html to use app.bakuage.com

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <webview
       id="webview"
       autosize="on"
-      src="https://www.github.com"
-      data-home="https://www.github.com"
+      src="https://app.bakuage.com"
+      data-home="https://app.bakuage.com"
     ></webview>
 
     <!-- HTML -->
